syntax = "proto3";
package user;
service UserInfo {
    //用户登陆
    rpc DoneUserLogin (In_doneUserLogin) returns (Out_doneUserLogin) {
    }
    //获取用户详细信息
    rpc GetUserInfo (In_getUserInfo) returns (Out_getUserInfo) {
    }
    //获取用户列表
    rpc GetUserInfoList (In_getUserInfoList) returns (Out_getUserInfoList) {
    }
    //修改用户信息
    rpc UpdateUserInfo (In_updateUserInfo) returns (Out_updateUserInfo) {
    }
    //用户注册
    rpc DoneUserRegister (In_doneUserRegister) returns (Out_doneUserRegister) {
    }
    //获取验证码
    rpc GetVerificationCode (In_getVerificationCode) returns (Out_getVerificationCode) {
    }

    //获取客户联系人
    rpc GetUserPassengerList (In_GetUserPassengerList) returns (Out_GetUserPassengerList) {
     }
     //修改用户联系人
     rpc UpdateUserPassenger (In_UpdateUserPassenger) returns (Out_UpdateUserPassenger) {
     }
     //登陆12306
     rpc Login12306 (In_Login12306) returns (Out_Login12306) {

     }


}
message Error {
    int32 code = 1;
    string message = 2;
}

message User_inf {
    string user_id = 1;
    string nike_name = 2;
    string user_name = 3;
    string password = 4; //登陆密码
    uint64 user_stats = 5; //登陆状态
    uint64 identity_card_type = 6;
    string identity_card_no = 7;
    string mobile_phone = 8;
    string user_email = 9;
    string gender = 10;
    uint64 user_point = 11;
    string register_time = 12;
    string modified_time = 14;
    string tran_user_name =15;     //12306 用户名称
    string tran_user_account =16;  //12306 用户账号
    string tran_user_pwd =17;      //12306 用户密码
}


//用户的联系人列表
message Passenger{
         string             id=1;                   //账户id
        string              user_id=2;           //账户id
        string              passenger_name=3;     //:"王芳平",
        string              sex_code=4;    //":"M",
        string              sex_name=5;    //":"男",
        string              born_date=6;   //:"1980-01-01 00:00:00",
        string              country_code=7;  //:"CN",
        string              passenger_id_type_code=8;  //:"1",
        string              passenger_id_type_name=9;   //:"中国居民身份证",
        string              passenger_id_no=10;        //":"5225***********610",
        string              passenger_type=11;        //:"1",
        string              passenger_flag=12;       //:"0",
        string              passenger_type_name=13;  //:"成人",
        string              mobile_no=14;            //:"18334142052",
        string              phone_no=15;             //":"",
        string              email=16;               //:"",
        string              address=17;               //:"",
        string              postalcode=18;           //":"",
        string              first_letter=19;         //:"WFP",
        string              recordCount=20;         //":"4",
        string              total_times=21;         //":"99",
        string              index_id=22;             //:"1",
        string              allEncStr=23;           //":"31d2c03567240868c35d68fa9a0d6b5c17cea9706ee43b3a7e066ced20000a692802483a95e936594e91b6096da9c9e8",
        string              isAdult=24;              //":"Y",
        string              isYongThan10=25;         //":"N",
        string              isYongThan14=26;           //":"N",
        string              isOldThan60=27;             //   :"N",
        string              gat_born_date=28;          //":"",
        string              gat_valid_date_start=29;  //''":"",
        string              gat_valid_date_end=30;     //:"",
        string              gat_version=31;             //:""


}
message In_doneUserLogin {
    string user_name = 1;
    string password = 2; //登陆密码
    string mobile_phone = 3;
    string verification_code = 4;
    uint64 login_type = 5; //登陆方式
}

message Out_doneUserLogin {
    Error Error = 1;
    string token = 2;
    User_inf user_inf = 3; //用户信息
}

message In_getUserInfo {
    string user_name = 1;
    string mobile_phone = 2;
    string user_id = 3;
}

message Out_getUserInfo {
    Error error = 1;
    User_inf user_inf = 2; //用户信息
    repeated string roles=3;
}

message In_getUserInfoList {
    int64 limit = 1;
    int64 pages = 2;
    string search_key = 3;
    string start_time = 4;
    string end_time = 5;
}

message Out_getUserInfoList {
    Error error = 1;
    int64 limit = 2;
    int64 pages = 3;
    int64 total = 4;
    repeated User_inf user_inf_list = 5;
}

message In_updateUserInfo {
    User_inf user_inf = 1;
}
message Out_updateUserInfo {
    Error Error = 1;
    User_inf user_inf = 2;
}

message In_doneUserRegister {
    User_inf userinf = 1; //用户基本信息
    string verification_code = 2; //验证
    string verification_phone = 3;
}

message Out_doneUserRegister {
    string Token = 1;
    Error Error = 2;
    User_inf user_inf = 3;
}

message In_getVerificationCode {
    string code = 1;
    string telephone = 2;
}

message Out_getVerificationCode {
    Error Error = 1;
}

message In_GetUserPassengerList {
   string user_id=1;
}

message Out_GetUserPassengerList {
    Error Error = 1;
    repeated Passenger passenger_list = 2;
}

message In_UpdateUserPassenger {
    string user_id=1;
   repeated Passenger passenger_list = 2;
}

message Out_UpdateUserPassenger {
     Error Error = 1;
}

message In_Login12306 {
     string user_id=1;
     string tran_user_account =2;  //12306 用户账号
     string tran_user_pwd =3;      //12306 用户密码
}

message Out_Login12306 {
     Error Error = 1;
}

